<resources>
    <string name="app_name">VillageBanking</string>
    <string name="textView">Hello Friday</string>
    <string name="welcome">Welcome User</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">Create Account</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
</resources>