<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_20sdp"
    android:scrollbars="none">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold">
        </TextView>

        <FrameLayout
            android:id="@+id/imagelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/userimage"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80ssp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:src="@drawable/avatar">

            </com.makeramen.roundedimageview.RoundedImageView>

            <TextView
                android:id="@+id/imagetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp">

            </TextView>

        </FrameLayout>

        <EditText
            android:id="@+id/nameinput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp">

        </EditText>

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp">

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp">

        </EditText>

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp">

        </EditText>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_15sdp">

            </com.google.android.material.button.MaterialButton>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                >

            </ProgressBar>


        </FrameLayout>


        <TextView
            android:id="@+id/loginid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Login"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/black">

        </TextView>


    </LinearLayout>

</ScrollView>