<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:id="@+id/emailadd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp">

        </EditText>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp">

        </EditText>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_15sdp">

            </com.google.android.material.button.MaterialButton>

            <ProgressBar
                android:id="@+id/loginprogressbar"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:visibility="invisible"
                android:layout_gravity="center">
            </ProgressBar>

        </FrameLayout>



        <TextView
            android:id="@+id/signupid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="Create New Account"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/black">

        </TextView>

    </LinearLayout>

</ScrollView>